--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newer Play games</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="jouez a des super jeux en ligne avec newer play games!">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     <header>
