--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                 <p>jouer au jeu en version beta peut provoquer des bugs</p>
                 <a href="games/gameone/game_testing.html" class="button">Lancer le jeu</a>
             </div>
+	    <div class="game">
+                <img src="images/gametwoimg.jpg" alt="game one">
+                <h2>casse brique</h2>
+                <p>il faut casser les brique certaines brique doivent être touchés plusieurs fois avant d'être cassé</p>
+                <a href="games/gameone/game_testing.html" class="button">Lancer le jeu</a>
+            </div>
             <!-- Ajoute plus de jeux ici -->
         </section>
     </main>
