--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img src="images/gametwoimg.jpg" alt="game one">
                 <h2>casse brique</h2>
                 <p>il faut casser les brique certaines brique doivent être touchés plusieurs fois avant d'être cassé</p>
-                <a href="games/gameone/game_testing.html" class="button">Lancer le jeu</a>
+                <a href="games/gametwo/index.html" class="button">Lancer le jeu</a>
             </div>
             <!-- Ajoute plus de jeux ici -->
         </section>
