--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
                 <a href="games/gameone/game_testing.html" class="button">Lancer le jeu</a>
             </div>
 	    <div class="game">
-                <img src="images/gametwoimg.jpg" alt="game one">
-                <h2>casse brique</h2>
+                <img src="images/gametwoimg.jpg" alt="game two">
+                <h2>newer casse brique</h2>
                 <p>il faut casser les brique certaines brique doivent être touchés plusieurs fois avant d'être cassé</p>
                 <a href="games/gametwo/index.html" class="button">Lancer le jeu</a>
+            </div>
+	    <div class="game">
+                <img src="images/gamethreeimg.jpg" alt="game three">
+                <h2>newer snake</h2>
+                <p>il faut manger les point rouge sans toucher le carré ni manger sa queue</p>
+                <a href="games/gamethree/index.html" class="button">Lancer le jeu</a>
             </div>
             <!-- Ajoute plus de jeux ici -->
         </section>
