--- a/index.html
+++ b/index.html
@@ -19,19 +19,25 @@
                 <img src="images/gameoneimg.jpg" alt="game one">
                 <h2>beta game</h2>
                 <p>jouer au jeu en version beta peut provoquer des bugs</p>
-                <a href="games/gameone/game_testing.html" class="button">Lancer le jeu</a>
+                <a href="games/gameone/game_testing.html" class="button">Lancer le jeu[PC/mobile]</a>
             </div>
 	    <div class="game">
                 <img src="images/gametwoimg.jpg" alt="game two">
                 <h2>newer casse brique</h2>
                 <p>il faut casser les brique certaines brique doivent être touchés plusieurs fois avant d'être cassé</p>
-                <a href="games/gametwo/index.html" class="button">Lancer le jeu</a>
+                <a href="games/gametwo/index.html" class="button">Lancer le jeu[PC]</a>
             </div>
 	    <div class="game">
                 <img src="images/gamethreeimg.jpg" alt="game three">
                 <h2>newer snake</h2>
                 <p>il faut manger les point rouge sans toucher le carré ni manger sa queue</p>
-                <a href="games/gamethree/index.html" class="button">Lancer le jeu</a>
+                <a href="games/gamethree/index.html" class="button">Lancer le jeu[PC]</a>
+            </div>
+	    <div class="game">
+                <img src="images/gamefourimg.jpg" alt="game four">
+                <h2>newer pong</h2>
+                <p>il ne faut pas laisser entrer la balle dans son camp</p>
+                <a href="games/gamefour/index.html" class="button">Lancer le jeu[PC]</a>
             </div>
             <!-- Ajoute plus de jeux ici -->
         </section>
