--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <h2>newer quiz</h2>
                 <p>répondez correctement a ces questions</p>
                 <a href="games/gamefive/index.html" class="button">Lancer le jeu[PC/mobile] en 1.0</a>
+		<a href="games/gamefive/index_1.1.0.html" class="button">Lancer le jeu[PC/mobile] en 1.1.0</a>
             </div>
             <!-- Ajoute plus de jeux ici -->
         </section>
