--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <p>répondez correctement a ces questions</p>
                 <a href="games/gamefive/index.html" class="button">Lancer le jeu[PC/mobile] en 1.0</a>
 		<a href="games/gamefive/index_1.1.0.html" class="button">Lancer le jeu[PC/mobile] en 1.1.0</a>
+		<a href="https://newer-browser.itch.io/newer-quiz-app" class="button">télécharger le jeu[PC]</a>
             </div>
             <!-- Ajoute plus de jeux ici -->
         </section>
